Fixed Pen and Eraser bug when changing between dark mode and regular mode

--- a/sketchy/popup.css
+++ b/sketchy/popup.css
@@ -90,14 +90,8 @@
     font-family: 'Tahoma';
 }
 
-.hover2:hover {
+.save-button:hover {
     background-color: black;
     border-color: black;
-    color: white;
-}
-
-.hover1:hover {
-    background-color:white;
-    border-color:white;
-    color: black;
+    color: white !important;
 }
